add data about the deployment

--- a/danceClassifierModelMulticat.ipynb
+++ b/danceClassifierModelMulticat.ipynb
@@ -1098,10 +1098,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once you are happy with your results you save the model.\n",
-    "\n",
-    "You can see deployment of the model in heroku in this URL: https://dancereco.herokuapp.com/\n",
-    "And the deployment process here: https://github.com/vhpvmx/dancereco"
+    "Once you are happy with your results save the model."
    ]
   },
   {
@@ -1192,7 +1189,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "You can see the app that uses this model here: https://dancereco.herokuapp.com/\n",
+    "And the deployment process here: https://github.com/vhpvmx/dancereco"
+   ]
   }
  ],
  "metadata": {
